<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:paddingTop="32dp"
        android:paddingBottom="60dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/txt_login_header"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/txt_login_subheader"
            android:textColor="@color/light_gray"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="72dp"
            android:text="@string/txt_username"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/txt_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:background="@android:color/transparent"
            android:hint="@string/txt_username_hint"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"
            android:textColorHint="@color/light_gray"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:background="@color/light_gray" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/txt_password"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/txt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:background="@android:color/transparent"
            android:hint="@string/txt_password_hint"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textColorHint="@color/light_gray"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:background="@color/light_gray" />

        <TextView
            android:id="@+id/txt_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text=""
            android:textColor="@android:color/holo_red_light"
            android:textSize="12sp" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/btn_login"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                style="@style/Widget.Material3.Button"
                android:backgroundTint="@color/black"
                android:text="@string/txt_login"
                android:textAllCaps="true"
                android:padding="10dp"
                android:textColor="@color/white"
                android:textSize="16sp" />
            <RelativeLayout
                android:visibility="invisible"
                android:id="@+id/loading_panel"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center" >

                <ProgressBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:indeterminate="true" />
            </RelativeLayout>
        </FrameLayout>

        <TextView
            android:id="@+id/btn_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/txt_no_account_signup"
            android:textSize="14sp" />

<!--        <com.github.ybq.android.spinkit.SpinKitView-->
<!--            android:visibility="gone"-->
<!--            xmlns:app="http://schemas.android.com/apk/res-auto"-->
<!--            android:id="@+id/progress_bar"-->
<!--            android:indeterminate="true"-->
<!--            style="@style/SpinKitView.ThreeBounce"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_gravity="center"-->
<!--            app:SpinKit_Color="@color/black" />-->

    </LinearLayout>


</ScrollView>